--- a/html_source_file/index.html
+++ b/html_source_file/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Yanbo | Your Affiliation</title>
+    <title>Your Name | Your Affiliation</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
